# JZ-F407VET6_Zephyr

./: .gitignore  LICENSE  README.md  build.sh  flash.sh
.west/: config
app_jz407/: west.yml
app_jz407/AT24C02/: CMakeLists.txt  prj.conf
app_jz407/AT24C02/src/: main.c
app_jz407/gpio_test/: CMakeLists.txt  prj.conf
app_jz407/gpio_test/src/: main.c
app_jz407/i2c_scanner/: CMakeLists.txt  app.overlay  prj.conf
app_jz407/i2c_scanner/src/: main.c
app_jz407/littlefs/: CMakeLists.txt  pc_text.txt  prj.conf  readme.md
app_jz407/littlefs/src/: main.c
app_jz407/nrf24l01/: CMakeLists.txt  app.overlay  prj.conf
app_jz407/nrf24l01/drivers/: Kconfig
app_jz407/nrf24l01/src/: main.c
app_jz407/publisher/: CMakeLists.txt  listener.py  prj.conf
app_jz407/publisher/src/: main copy.c  main.c
app_jz407/ssd1306/: CMakeLists.txt  app.overlay  prj.conf
app_jz407/ssd1306/src/: main.c
app_jz407/ssd1316/: CMakeLists.txt  app.overlay  prj.conf  readme.md
app_jz407/ssd1316/drivers/: Kconfig
app_jz407/ssd1316/drivers/display/: CMakeLists.txt  Kconfig  ssd1316.c  ssd1316_regs.h
app_jz407/ssd1316/dts/bindings/display/: solomon,ssd1316fb.yaml
app_jz407/ssd1316/src/: droid_sans_mono_8.c  main.c
app_jz407/tcp/: CMakeLists.txt  prj.conf  server.py
app_jz407/tcp/src/: main.c
app_jz407/tcp_tls/: CMakeLists.txt  prj.conf  readme.md  server.py
app_jz407/tcp_tls/crt/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key
app_jz407/tcp_tls/src/: main.c
boards/arm/JZ_F407VET6/: JZ_F407VET6.dts  JZ_F407VET6.yaml  JZ_F407VET6_defconfig  Kconfig.JZ_F407VET6  (+3 more)
(+2 files in other folders)
